# Building-and-connecting-libraries

./: README.md
Task1/Greeter/: Greeter.sln
Task1/Greeter/ClientGreeter/: ClientGreeter.cpp  ClientGreeter.vcxproj  ClientGreeter.vcxproj.filters
Task1/Greeter/Greeter/: Greeter.cpp  Greeter.h  Greeter.vcxproj
Task2/Leaver/: Leaver.sln
Task2/Leaver/ClientLeaver/: ClientLeaver.cpp  ClientLeaver.vcxproj  ClientLeaver.vcxproj.filters
Task2/Leaver/Leaver/: Leaver.cpp  Leaver.h  Leaver.vcxproj
Task3/: CMakeLists.txt  Leaver.cpp  Leaver.h  main.cpp
Task4/: Task4.sln
Task4/Client/: Client.vcxproj
Task4/Task4/: Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.h  Right_triangle.h  Shapes.h  Square.h  Task4.vcxproj  Task4.vcxproj.filters  Triangle.h
Task5/: CMakeLists.txt  Client.cpp  Equilateral_triangle.h  Figure.cpp  Figure.h  Isosceles_triangle.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_triangle.cpp  Right_triangle.h  Shapes.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
